fix breadcrumbs, adjust some stuff on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -196,10 +196,14 @@ input[type="checkbox"]#site-nav-toggle:checked ~ .site-header--project:after {
 
 .info-header__interior {
   width: auto;
-  min-width: 64px;
   padding-bottom: 12px;
   border-top: 1px solid #000;
   background-color: #fff;
+}
+@media screen and (min-width: {{ page.med_desktop }}px) {
+  .info-header__interior {
+    min-width: 64px;
+  }
 }
 
 /* /HEADER */
@@ -555,36 +559,39 @@ screen and (min-width: {{ page.med_desktop }}px) {
 .project__header {
   display: flex;
   flex-direction: row-reverse;
-  margin-bottom: 16px;
   padding: 12px 16px;
 }
 @media screen and (min-width: {{ page.med_desktop }}px) {
   .project__header {
     flex-direction: column;
+    padding: 20px 16px;
   }
 }
 
-.breadcrumbs {
+.project__breadcrumbs {
+  width: 36px;
 }
 
 .breadcrumbs {
-  text-align: right;
-  margin-top: 12px;
-  flex-shrink: 0;
+  /* text-align: right; */
+  /* margin-top: 12px; */
+  transform: rotate(90deg);
+  margin-left: 30px;
 }
 .breadcrumbs,
 .breadcrumbs__item {
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
+  flex-shrink: 0;
 }
 @media screen and (min-width: {{ page.med_desktop }}px) {
   .breadcrumbs,
   .breadcrumbs__item {
-    flex-direction: row;
+    transform: none;
   }
   .breadcrumbs {
-    margin-left: 2px;
+    margin-top: 4px;
+    margin-left: 0;
   }
 }
 
@@ -607,7 +614,6 @@ screen and (min-width: {{ page.med_desktop }}px) {
 
 /* MAIN: Project */
 .project__title {
-  margin-right: 24px;
   flex: 1;
 }
 @media screen and (min-width: {{ page.med_desktop }}px) {
@@ -617,7 +623,12 @@ screen and (min-width: {{ page.med_desktop }}px) {
 }
 
 .project__section--video {
-  padding: 24px 48px 48px;
+  padding: 24px 48px 24px 16px;
+}
+@media screen and (min-width: {{ page.min_desktop }}px) {
+ .project__section--video {
+    padding: 24px 48px 48px 48px;
+  }
 }
 
 .project__section--video video {
@@ -627,7 +638,11 @@ screen and (min-width: {{ page.med_desktop }}px) {
   box-shadow: 0 2px 8px rgba(0,0,0,0.2);
 }
 
-.project__section--video img {
+.project__section--image {
+    padding: 24px 48px 48px 48px;
+}
+
+.project__section--image img {
   max-width: 640px;
   width: 100%;
 }
@@ -812,15 +827,24 @@ screen and (min-width: {{ page.med_desktop }}px) {
     World-hover 1.6s ease-in-out infinite alternate 0.2s;
 }
 .world--project {
-  width: 32px;
-  height: 32px;
-  background-size: 32px;
+  width: 24px;
+  height: 24px;
+  margin: 6px 0;
+  background-size: 24px;
   border-radius: 100%;
   background-color: white;
   border: 4px solid #fff;
   animation:
     World-appear-small 1 0.6s linear,
     World-hover 1.6s ease-in-out infinite alternate 0.2s;
+}
+@media screen and (min-width: {{ page.med_desktop }}px) {
+  .world--project {
+    width: 32px;
+    height: 32px;
+    margin: 6px 8px;
+    background-size: 32px;
+  }
 }
 
 .project__icon {
@@ -912,11 +936,10 @@ body * {
 }
 
 .project__title {
-  display: flex;
-  align-items: center;
-  margin-top: 8px;
   font-size: 24px;
+  font-weight: 750;
   letter-spacing: 0.8px;
+  margin-top: 8px;
 }
 @media screen and (min-width: {{ page.min_desktop }}px) {
   .project__title {
@@ -948,10 +971,6 @@ body * {
 .project__link {
   color: #000;
   text-decoration: none;
-}
-
-.project__title {
-  font-weight: 750;
 }
 
 .breadcrumbs__item,
